--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
     <main>
       <div class="loginContainer">
         <div class="loginContainer-main">
-          <div><h1>Register</h1></div>
+          <div><h1> Train Register</h1></div>
           <form id="registerForm">
             <div class="form-group">
               <label for="nameInput">Name</label>
